src/test/deca/syntax/invalid/sansobjet/lex_floatdecmax2_invalid.deca
// Test limite flottant debordement
// erreur IllegallArgument ligne 3
3.40282346000001E39
